2003-10-12  Bastien Nocera  <hadess@hadess.net>

	* single_module/tools/list_translators.sh: that's one argument needed
	not 2

2003-10-12  Bastien Nocera  <hadess@hadess.net>

	* single_module/tools/list_translators.sh: print out the usage if
	the number of arguments is not the right one

2003-09-20  Kjartan Maraas  <kmaraas@gnome.org>

	* 2.x/2.4rnotes/rninstallation.xml: Move scrollkeeper up to
	make the build order work.

2003-09-09  Mark McLoughlin  <mark@skynet.ie>

	* single_module/tools/list_translators.sh: play with the voodoo
	a bit.

2003-07-07  Mark McLoughlin  <mark@skynet.ie>

	* single_module/tools/list_translators.sh: fix a couple of things.

2003-06-18  Murray Cumming  <murrayc@usa.net>

	* 2.x/: Started skeleton of 2.4 release notes, by ripping stuff out of
	a copy of the 2.2 release notes.
	* Put the 2.0 release notes in an appropriately named directory.

2003-06-14  Mark McLoughlin  <mark@skynet.ie>

	* single_module/tools/list_translators.sh: kill runsocks
	foo.

2003-06-12  Mark McLoughlin  <mark@skynet.ie>

	* single_module/tools/list_translators.sh: fix buglet
	where the .po filename is printed instead of just the
	language code.

2003-06-07  Murray Cumming  <murrayc@usa.net>

	* 2.x/package-list: Removed all sections except Platform and Desktop.
	The rest was out-of-date and unused.
	* Moved 1.4 stuff to the 1.x directory.
	* Added docs and tools directories with some initial stuff gathered
	from the release team.
	* Added single_release directory also with docs and tools, for stuff
	that is is helpful to individual maintainers.

2003-02-01 John Fleck <jfleck@inkstain.net>

	* 2.x/2.2rnotes/release-notes.xml
	fixing docbook up

2003-01-31 John Fleck <jfleck@inkstain.net>

	added:
	* 2.x/2.2rnotes/rnfileroller.xml, rngnomeutilities.xml,
	release-notes.xml, rngnomeapplets.xml, rnmultimediakeys.xml
	docbooked version of Glynn's first draft of the release notes

2003-01-31  Murray Cumming  <murrayc@usa.net>
