@@ -1,2 +1,4 @@
 list_translators.sh:
   Builds a list of translator names to be credited in release annoucements.
+list_translators.pl:
+  same as list_translators.sh but in Perl
